# Hardware_Inventory-System

./: README.md  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  db.rs  lib.rs  service.rs  sys.rs
